@@ -1,4 +1,6 @@
 20070314:  version 0.9.5 (svn revision 3048)
+		   * reorganized data files so that bdist_egg includes the data.
+           setup-data.py now used to install the high-res data files.
            * make sure proj returns 1.e30 instead of HUGE_VAL for
 		   undefined transformations (HUGE_VAL is inf on most
 		   platforms, which gets embedded in the postscript, resulting
